test/resources/InvalidPrograms/test_6.lo
// bad test case
// Method defined outside of class
// Author: Aaron Wollman (Summer 2021)

int add(int a, int b){
    {
        return (a + b);
    }
}

class Main() {
    int main(){
        {
            return add(5, 6);
        }
    }
}